[tool.poetry]
name = "licensegh"
version = "1.0.8"
description = "licensegh is a command line tool that generates a license file for a project from the github open source lincese templates"
authors = ["Saúl Piña <sauljabin@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sauljabin/licensegh"
repository = "https://github.com/sauljabin/licensegh"
keywords = ["lincese", "choosealicense", "licensegh"]
classifiers = [
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: Unix"
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8"
rich = "^13"
GitPython = "^3"
PyYAML = "^6"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
bandit = "*"
Faker = "*"
coverage = {extras = ["toml"], version = "*"}
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ["licensegh"]
branch = true
omit = ["*tests/*", "*scripts/*", "*__init__.py", "licensegh/__main__.py"]

[tool.coverage.report]
exclude_lines = ['if __name__ == "__main__":']

[tool.poetry.scripts]
licensegh = "licensegh.cli:main"
lgh = "licensegh.cli:main"
